parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE

Grammar

Rule 0     S' -> programa_minipar
Rule 1     programa_minipar -> bloco_stmt
Rule 2     bloco_stmt -> bloco_SEQ
Rule 3     bloco_stmt -> bloco_PAR
Rule 4     bloco_stmt -> bloco_stmt bloco_SEQ
Rule 5     bloco_stmt -> bloco_stmt bloco_PAR
Rule 6     bloco_SEQ -> SEQ stmts
Rule 7     bloco_PAR -> PAR stmts
Rule 8     bloco_IF -> IF LPAREN bool RPAREN LBRACE stmts RBRACE
Rule 9     bloco_WHILE -> WHILE LPAREN bool RPAREN LBRACE stmts RBRACE
Rule 10    bloco_INPUT -> INPUT LPAREN RPAREN
Rule 11    bloco_OUTPUT -> OUTPUT LPAREN output_args RPAREN
Rule 12    output_args -> expr
Rule 13    output_args -> output_args COMMA expr
Rule 14    stmts -> stmt
Rule 15    stmts -> stmts stmt
Rule 16    stmt -> atribuicao
Rule 17    stmt -> bloco_IF
Rule 18    stmt -> bloco_WHILE
Rule 19    stmt -> bloco_INPUT
Rule 20    stmt -> bloco_OUTPUT
Rule 21    stmt -> c_channel
Rule 22    stmt -> c_channel_stmt
Rule 23    atribuicao -> ID EQUALS expr
Rule 24    atribuicao -> ID EQUALS STRING
Rule 25    atribuicao -> ID EQUALS bloco_INPUT
Rule 26    atribuicao -> ID EQUALS receive_stmt
Rule 27    expr -> INT
Rule 28    expr -> STRING
Rule 29    expr -> expr PLUS expr
Rule 30    expr -> expr MINUS expr
Rule 31    expr -> expr TIMES expr
Rule 32    expr -> expr DIVIDE expr
Rule 33    expr -> expr LESS_THAN expr
Rule 34    expr -> expr GREATER_THAN expr
Rule 35    expr -> expr LESS_THAN_EQUALS expr
Rule 36    expr -> expr GREATER_THAN_EQUALS expr
Rule 37    expr -> expr EQUALS_EQUALS expr
Rule 38    expr -> expr NOT_EQUALS expr
Rule 39    expr -> ID
Rule 40    bool -> expr
Rule 41    comment -> COMMENT
Rule 42    c_channel -> C_CHANNEL ID LPAREN STRING COMMA STRING RPAREN
Rule 43    c_channel_stmt -> send_stmt
Rule 44    c_channel_stmt -> receive_stmt
Rule 45    send_stmt -> ID DOT SEND LPAREN args RPAREN
Rule 46    receive_stmt -> ID DOT RECEIVE LPAREN args RPAREN
Rule 47    args -> expr
Rule 48    args -> args COMMA expr

Terminals, with rules where they appear

COMMA                : 13 42 48
COMMENT              : 41
C_CHANNEL            : 42
DIVIDE               : 32
DOT                  : 45 46
ELSE                 : 
EQUALS               : 23 24 25 26
EQUALS_EQUALS        : 37
GREATER_THAN         : 34
GREATER_THAN_EQUALS  : 36
ID                   : 23 24 25 26 39 42 45 46
IF                   : 8
INPUT                : 10
INT                  : 27
LBRACE               : 8 9
LESS_THAN            : 33
LESS_THAN_EQUALS     : 35
LPAREN               : 8 9 10 11 42 45 46
MINUS                : 30
NOT_EQUALS           : 38
OUTPUT               : 11
PAR                  : 7
PLUS                 : 29
RBRACE               : 8 9
RECEIVE              : 46
RPAREN               : 8 9 10 11 42 45 46
SEND                 : 45
SEQ                  : 6
STRING               : 24 28 42 42
TIMES                : 31
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

args                 : 45 46 48
atribuicao           : 16
bloco_IF             : 17
bloco_INPUT          : 19 25
bloco_OUTPUT         : 20
bloco_PAR            : 3 5
bloco_SEQ            : 2 4
bloco_WHILE          : 18
bloco_stmt           : 1 4 5
bool                 : 8 9
c_channel            : 21
c_channel_stmt       : 22
comment              : 
expr                 : 12 13 23 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 40 47 48
output_args          : 11 13
programa_minipar     : 0
receive_stmt         : 26 44
send_stmt            : 43
stmt                 : 14 15
stmts                : 6 7 8 9 15

Parsing method: LALR

state 0

    (0) S' -> . programa_minipar
    (1) programa_minipar -> . bloco_stmt
    (2) bloco_stmt -> . bloco_SEQ
    (3) bloco_stmt -> . bloco_PAR
    (4) bloco_stmt -> . bloco_stmt bloco_SEQ
    (5) bloco_stmt -> . bloco_stmt bloco_PAR
    (6) bloco_SEQ -> . SEQ stmts
    (7) bloco_PAR -> . PAR stmts

    SEQ             shift and go to state 5
    PAR             shift and go to state 6

    programa_minipar               shift and go to state 1
    bloco_stmt                     shift and go to state 2
    bloco_SEQ                      shift and go to state 3
    bloco_PAR                      shift and go to state 4

state 1

    (0) S' -> programa_minipar .



state 2

    (1) programa_minipar -> bloco_stmt .
    (4) bloco_stmt -> bloco_stmt . bloco_SEQ
    (5) bloco_stmt -> bloco_stmt . bloco_PAR
    (6) bloco_SEQ -> . SEQ stmts
    (7) bloco_PAR -> . PAR stmts

    $end            reduce using rule 1 (programa_minipar -> bloco_stmt .)
    SEQ             shift and go to state 5
    PAR             shift and go to state 6

    bloco_SEQ                      shift and go to state 7
    bloco_PAR                      shift and go to state 8

state 3

    (2) bloco_stmt -> bloco_SEQ .

    SEQ             reduce using rule 2 (bloco_stmt -> bloco_SEQ .)
    PAR             reduce using rule 2 (bloco_stmt -> bloco_SEQ .)
    $end            reduce using rule 2 (bloco_stmt -> bloco_SEQ .)


state 4

    (3) bloco_stmt -> bloco_PAR .

    SEQ             reduce using rule 3 (bloco_stmt -> bloco_PAR .)
    PAR             reduce using rule 3 (bloco_stmt -> bloco_PAR .)
    $end            reduce using rule 3 (bloco_stmt -> bloco_PAR .)


state 5

    (6) bloco_SEQ -> SEQ . stmts
    (14) stmts -> . stmt
    (15) stmts -> . stmts stmt
    (16) stmt -> . atribuicao
    (17) stmt -> . bloco_IF
    (18) stmt -> . bloco_WHILE
    (19) stmt -> . bloco_INPUT
    (20) stmt -> . bloco_OUTPUT
    (21) stmt -> . c_channel
    (22) stmt -> . c_channel_stmt
    (23) atribuicao -> . ID EQUALS expr
    (24) atribuicao -> . ID EQUALS STRING
    (25) atribuicao -> . ID EQUALS bloco_INPUT
    (26) atribuicao -> . ID EQUALS receive_stmt
    (8) bloco_IF -> . IF LPAREN bool RPAREN LBRACE stmts RBRACE
    (9) bloco_WHILE -> . WHILE LPAREN bool RPAREN LBRACE stmts RBRACE
    (10) bloco_INPUT -> . INPUT LPAREN RPAREN
    (11) bloco_OUTPUT -> . OUTPUT LPAREN output_args RPAREN
    (42) c_channel -> . C_CHANNEL ID LPAREN STRING COMMA STRING RPAREN
    (43) c_channel_stmt -> . send_stmt
    (44) c_channel_stmt -> . receive_stmt
    (45) send_stmt -> . ID DOT SEND LPAREN args RPAREN
    (46) receive_stmt -> . ID DOT RECEIVE LPAREN args RPAREN

    ID              shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    INPUT           shift and go to state 22
    OUTPUT          shift and go to state 23
    C_CHANNEL       shift and go to state 24

    stmts                          shift and go to state 9
    stmt                           shift and go to state 10
    atribuicao                     shift and go to state 11
    bloco_IF                       shift and go to state 12
    bloco_WHILE                    shift and go to state 13
    bloco_INPUT                    shift and go to state 14
    bloco_OUTPUT                   shift and go to state 15
    c_channel                      shift and go to state 16
    c_channel_stmt                 shift and go to state 17
    receive_stmt                   shift and go to state 19
    send_stmt                      shift and go to state 25

state 6

    (7) bloco_PAR -> PAR . stmts
    (14) stmts -> . stmt
    (15) stmts -> . stmts stmt
    (16) stmt -> . atribuicao
    (17) stmt -> . bloco_IF
    (18) stmt -> . bloco_WHILE
    (19) stmt -> . bloco_INPUT
    (20) stmt -> . bloco_OUTPUT
    (21) stmt -> . c_channel
    (22) stmt -> . c_channel_stmt
    (23) atribuicao -> . ID EQUALS expr
    (24) atribuicao -> . ID EQUALS STRING
    (25) atribuicao -> . ID EQUALS bloco_INPUT
    (26) atribuicao -> . ID EQUALS receive_stmt
    (8) bloco_IF -> . IF LPAREN bool RPAREN LBRACE stmts RBRACE
    (9) bloco_WHILE -> . WHILE LPAREN bool RPAREN LBRACE stmts RBRACE
    (10) bloco_INPUT -> . INPUT LPAREN RPAREN
    (11) bloco_OUTPUT -> . OUTPUT LPAREN output_args RPAREN
    (42) c_channel -> . C_CHANNEL ID LPAREN STRING COMMA STRING RPAREN
    (43) c_channel_stmt -> . send_stmt
    (44) c_channel_stmt -> . receive_stmt
    (45) send_stmt -> . ID DOT SEND LPAREN args RPAREN
    (46) receive_stmt -> . ID DOT RECEIVE LPAREN args RPAREN

    ID              shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    INPUT           shift and go to state 22
    OUTPUT          shift and go to state 23
    C_CHANNEL       shift and go to state 24

    stmts                          shift and go to state 26
    stmt                           shift and go to state 10
    atribuicao                     shift and go to state 11
    bloco_IF                       shift and go to state 12
    bloco_WHILE                    shift and go to state 13
    bloco_INPUT                    shift and go to state 14
    bloco_OUTPUT                   shift and go to state 15
    c_channel                      shift and go to state 16
    c_channel_stmt                 shift and go to state 17
    receive_stmt                   shift and go to state 19
    send_stmt                      shift and go to state 25

state 7

    (4) bloco_stmt -> bloco_stmt bloco_SEQ .

    SEQ             reduce using rule 4 (bloco_stmt -> bloco_stmt bloco_SEQ .)
    PAR             reduce using rule 4 (bloco_stmt -> bloco_stmt bloco_SEQ .)
    $end            reduce using rule 4 (bloco_stmt -> bloco_stmt bloco_SEQ .)


state 8

    (5) bloco_stmt -> bloco_stmt bloco_PAR .

    SEQ             reduce using rule 5 (bloco_stmt -> bloco_stmt bloco_PAR .)
    PAR             reduce using rule 5 (bloco_stmt -> bloco_stmt bloco_PAR .)
    $end            reduce using rule 5 (bloco_stmt -> bloco_stmt bloco_PAR .)


state 9

    (6) bloco_SEQ -> SEQ stmts .
    (15) stmts -> stmts . stmt
    (16) stmt -> . atribuicao
    (17) stmt -> . bloco_IF
    (18) stmt -> . bloco_WHILE
    (19) stmt -> . bloco_INPUT
    (20) stmt -> . bloco_OUTPUT
    (21) stmt -> . c_channel
    (22) stmt -> . c_channel_stmt
    (23) atribuicao -> . ID EQUALS expr
    (24) atribuicao -> . ID EQUALS STRING
    (25) atribuicao -> . ID EQUALS bloco_INPUT
    (26) atribuicao -> . ID EQUALS receive_stmt
    (8) bloco_IF -> . IF LPAREN bool RPAREN LBRACE stmts RBRACE
    (9) bloco_WHILE -> . WHILE LPAREN bool RPAREN LBRACE stmts RBRACE
    (10) bloco_INPUT -> . INPUT LPAREN RPAREN
    (11) bloco_OUTPUT -> . OUTPUT LPAREN output_args RPAREN
    (42) c_channel -> . C_CHANNEL ID LPAREN STRING COMMA STRING RPAREN
    (43) c_channel_stmt -> . send_stmt
    (44) c_channel_stmt -> . receive_stmt
    (45) send_stmt -> . ID DOT SEND LPAREN args RPAREN
    (46) receive_stmt -> . ID DOT RECEIVE LPAREN args RPAREN

    SEQ             reduce using rule 6 (bloco_SEQ -> SEQ stmts .)
    PAR             reduce using rule 6 (bloco_SEQ -> SEQ stmts .)
    $end            reduce using rule 6 (bloco_SEQ -> SEQ stmts .)
    ID              shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    INPUT           shift and go to state 22
    OUTPUT          shift and go to state 23
    C_CHANNEL       shift and go to state 24

    stmt                           shift and go to state 27
    atribuicao                     shift and go to state 11
    bloco_IF                       shift and go to state 12
    bloco_WHILE                    shift and go to state 13
    bloco_INPUT                    shift and go to state 14
    bloco_OUTPUT                   shift and go to state 15
    c_channel                      shift and go to state 16
    c_channel_stmt                 shift and go to state 17
    receive_stmt                   shift and go to state 19
    send_stmt                      shift and go to state 25

state 10

    (14) stmts -> stmt .

    ID              reduce using rule 14 (stmts -> stmt .)
    IF              reduce using rule 14 (stmts -> stmt .)
    WHILE           reduce using rule 14 (stmts -> stmt .)
    INPUT           reduce using rule 14 (stmts -> stmt .)
    OUTPUT          reduce using rule 14 (stmts -> stmt .)
    C_CHANNEL       reduce using rule 14 (stmts -> stmt .)
    SEQ             reduce using rule 14 (stmts -> stmt .)
    PAR             reduce using rule 14 (stmts -> stmt .)
    $end            reduce using rule 14 (stmts -> stmt .)
    RBRACE          reduce using rule 14 (stmts -> stmt .)


state 11

    (16) stmt -> atribuicao .

    ID              reduce using rule 16 (stmt -> atribuicao .)
    IF              reduce using rule 16 (stmt -> atribuicao .)
    WHILE           reduce using rule 16 (stmt -> atribuicao .)
    INPUT           reduce using rule 16 (stmt -> atribuicao .)
    OUTPUT          reduce using rule 16 (stmt -> atribuicao .)
    C_CHANNEL       reduce using rule 16 (stmt -> atribuicao .)
    SEQ             reduce using rule 16 (stmt -> atribuicao .)
    PAR             reduce using rule 16 (stmt -> atribuicao .)
    $end            reduce using rule 16 (stmt -> atribuicao .)
    RBRACE          reduce using rule 16 (stmt -> atribuicao .)


state 12

    (17) stmt -> bloco_IF .

    ID              reduce using rule 17 (stmt -> bloco_IF .)
    IF              reduce using rule 17 (stmt -> bloco_IF .)
    WHILE           reduce using rule 17 (stmt -> bloco_IF .)
    INPUT           reduce using rule 17 (stmt -> bloco_IF .)
    OUTPUT          reduce using rule 17 (stmt -> bloco_IF .)
    C_CHANNEL       reduce using rule 17 (stmt -> bloco_IF .)
    SEQ             reduce using rule 17 (stmt -> bloco_IF .)
    PAR             reduce using rule 17 (stmt -> bloco_IF .)
    $end            reduce using rule 17 (stmt -> bloco_IF .)
    RBRACE          reduce using rule 17 (stmt -> bloco_IF .)


state 13

    (18) stmt -> bloco_WHILE .

    ID              reduce using rule 18 (stmt -> bloco_WHILE .)
    IF              reduce using rule 18 (stmt -> bloco_WHILE .)
    WHILE           reduce using rule 18 (stmt -> bloco_WHILE .)
    INPUT           reduce using rule 18 (stmt -> bloco_WHILE .)
    OUTPUT          reduce using rule 18 (stmt -> bloco_WHILE .)
    C_CHANNEL       reduce using rule 18 (stmt -> bloco_WHILE .)
    SEQ             reduce using rule 18 (stmt -> bloco_WHILE .)
    PAR             reduce using rule 18 (stmt -> bloco_WHILE .)
    $end            reduce using rule 18 (stmt -> bloco_WHILE .)
    RBRACE          reduce using rule 18 (stmt -> bloco_WHILE .)


state 14

    (19) stmt -> bloco_INPUT .

    ID              reduce using rule 19 (stmt -> bloco_INPUT .)
    IF              reduce using rule 19 (stmt -> bloco_INPUT .)
    WHILE           reduce using rule 19 (stmt -> bloco_INPUT .)
    INPUT           reduce using rule 19 (stmt -> bloco_INPUT .)
    OUTPUT          reduce using rule 19 (stmt -> bloco_INPUT .)
    C_CHANNEL       reduce using rule 19 (stmt -> bloco_INPUT .)
    SEQ             reduce using rule 19 (stmt -> bloco_INPUT .)
    PAR             reduce using rule 19 (stmt -> bloco_INPUT .)
    $end            reduce using rule 19 (stmt -> bloco_INPUT .)
    RBRACE          reduce using rule 19 (stmt -> bloco_INPUT .)


state 15

    (20) stmt -> bloco_OUTPUT .

    ID              reduce using rule 20 (stmt -> bloco_OUTPUT .)
    IF              reduce using rule 20 (stmt -> bloco_OUTPUT .)
    WHILE           reduce using rule 20 (stmt -> bloco_OUTPUT .)
    INPUT           reduce using rule 20 (stmt -> bloco_OUTPUT .)
    OUTPUT          reduce using rule 20 (stmt -> bloco_OUTPUT .)
    C_CHANNEL       reduce using rule 20 (stmt -> bloco_OUTPUT .)
    SEQ             reduce using rule 20 (stmt -> bloco_OUTPUT .)
    PAR             reduce using rule 20 (stmt -> bloco_OUTPUT .)
    $end            reduce using rule 20 (stmt -> bloco_OUTPUT .)
    RBRACE          reduce using rule 20 (stmt -> bloco_OUTPUT .)


state 16

    (21) stmt -> c_channel .

    ID              reduce using rule 21 (stmt -> c_channel .)
    IF              reduce using rule 21 (stmt -> c_channel .)
    WHILE           reduce using rule 21 (stmt -> c_channel .)
    INPUT           reduce using rule 21 (stmt -> c_channel .)
    OUTPUT          reduce using rule 21 (stmt -> c_channel .)
    C_CHANNEL       reduce using rule 21 (stmt -> c_channel .)
    SEQ             reduce using rule 21 (stmt -> c_channel .)
    PAR             reduce using rule 21 (stmt -> c_channel .)
    $end            reduce using rule 21 (stmt -> c_channel .)
    RBRACE          reduce using rule 21 (stmt -> c_channel .)


state 17

    (22) stmt -> c_channel_stmt .

    ID              reduce using rule 22 (stmt -> c_channel_stmt .)
    IF              reduce using rule 22 (stmt -> c_channel_stmt .)
    WHILE           reduce using rule 22 (stmt -> c_channel_stmt .)
    INPUT           reduce using rule 22 (stmt -> c_channel_stmt .)
    OUTPUT          reduce using rule 22 (stmt -> c_channel_stmt .)
    C_CHANNEL       reduce using rule 22 (stmt -> c_channel_stmt .)
    SEQ             reduce using rule 22 (stmt -> c_channel_stmt .)
    PAR             reduce using rule 22 (stmt -> c_channel_stmt .)
    $end            reduce using rule 22 (stmt -> c_channel_stmt .)
    RBRACE          reduce using rule 22 (stmt -> c_channel_stmt .)


state 18

    (23) atribuicao -> ID . EQUALS expr
    (24) atribuicao -> ID . EQUALS STRING
    (25) atribuicao -> ID . EQUALS bloco_INPUT
    (26) atribuicao -> ID . EQUALS receive_stmt
    (45) send_stmt -> ID . DOT SEND LPAREN args RPAREN
    (46) receive_stmt -> ID . DOT RECEIVE LPAREN args RPAREN

    EQUALS          shift and go to state 28
    DOT             shift and go to state 29


state 19

    (44) c_channel_stmt -> receive_stmt .

    ID              reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    IF              reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    WHILE           reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    INPUT           reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    OUTPUT          reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    C_CHANNEL       reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    SEQ             reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    PAR             reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    $end            reduce using rule 44 (c_channel_stmt -> receive_stmt .)
    RBRACE          reduce using rule 44 (c_channel_stmt -> receive_stmt .)


state 20

    (8) bloco_IF -> IF . LPAREN bool RPAREN LBRACE stmts RBRACE

    LPAREN          shift and go to state 30


state 21

    (9) bloco_WHILE -> WHILE . LPAREN bool RPAREN LBRACE stmts RBRACE

    LPAREN          shift and go to state 31


state 22

    (10) bloco_INPUT -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 32


state 23

    (11) bloco_OUTPUT -> OUTPUT . LPAREN output_args RPAREN

    LPAREN          shift and go to state 33


state 24

    (42) c_channel -> C_CHANNEL . ID LPAREN STRING COMMA STRING RPAREN

    ID              shift and go to state 34


state 25

    (43) c_channel_stmt -> send_stmt .

    ID              reduce using rule 43 (c_channel_stmt -> send_stmt .)
    IF              reduce using rule 43 (c_channel_stmt -> send_stmt .)
    WHILE           reduce using rule 43 (c_channel_stmt -> send_stmt .)
    INPUT           reduce using rule 43 (c_channel_stmt -> send_stmt .)
    OUTPUT          reduce using rule 43 (c_channel_stmt -> send_stmt .)
    C_CHANNEL       reduce using rule 43 (c_channel_stmt -> send_stmt .)
    SEQ             reduce using rule 43 (c_channel_stmt -> send_stmt .)
    PAR             reduce using rule 43 (c_channel_stmt -> send_stmt .)
    $end            reduce using rule 43 (c_channel_stmt -> send_stmt .)
    RBRACE          reduce using rule 43 (c_channel_stmt -> send_stmt .)


state 26

    (7) bloco_PAR -> PAR stmts .
    (15) stmts -> stmts . stmt
    (16) stmt -> . atribuicao
    (17) stmt -> . bloco_IF
    (18) stmt -> . bloco_WHILE
    (19) stmt -> . bloco_INPUT
    (20) stmt -> . bloco_OUTPUT
    (21) stmt -> . c_channel
    (22) stmt -> . c_channel_stmt
    (23) atribuicao -> . ID EQUALS expr
    (24) atribuicao -> . ID EQUALS STRING
    (25) atribuicao -> . ID EQUALS bloco_INPUT
    (26) atribuicao -> . ID EQUALS receive_stmt
    (8) bloco_IF -> . IF LPAREN bool RPAREN LBRACE stmts RBRACE
    (9) bloco_WHILE -> . WHILE LPAREN bool RPAREN LBRACE stmts RBRACE
    (10) bloco_INPUT -> . INPUT LPAREN RPAREN
    (11) bloco_OUTPUT -> . OUTPUT LPAREN output_args RPAREN
    (42) c_channel -> . C_CHANNEL ID LPAREN STRING COMMA STRING RPAREN
    (43) c_channel_stmt -> . send_stmt
    (44) c_channel_stmt -> . receive_stmt
    (45) send_stmt -> . ID DOT SEND LPAREN args RPAREN
    (46) receive_stmt -> . ID DOT RECEIVE LPAREN args RPAREN

    SEQ             reduce using rule 7 (bloco_PAR -> PAR stmts .)
    PAR             reduce using rule 7 (bloco_PAR -> PAR stmts .)
    $end            reduce using rule 7 (bloco_PAR -> PAR stmts .)
    ID              shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    INPUT           shift and go to state 22
    OUTPUT          shift and go to state 23
    C_CHANNEL       shift and go to state 24

    stmt                           shift and go to state 27
    atribuicao                     shift and go to state 11
    bloco_IF                       shift and go to state 12
    bloco_WHILE                    shift and go to state 13
    bloco_INPUT                    shift and go to state 14
    bloco_OUTPUT                   shift and go to state 15
    c_channel                      shift and go to state 16
    c_channel_stmt                 shift and go to state 17
    receive_stmt                   shift and go to state 19
    send_stmt                      shift and go to state 25

state 27

    (15) stmts -> stmts stmt .

    ID              reduce using rule 15 (stmts -> stmts stmt .)
    IF              reduce using rule 15 (stmts -> stmts stmt .)
    WHILE           reduce using rule 15 (stmts -> stmts stmt .)
    INPUT           reduce using rule 15 (stmts -> stmts stmt .)
    OUTPUT          reduce using rule 15 (stmts -> stmts stmt .)
    C_CHANNEL       reduce using rule 15 (stmts -> stmts stmt .)
    SEQ             reduce using rule 15 (stmts -> stmts stmt .)
    PAR             reduce using rule 15 (stmts -> stmts stmt .)
    $end            reduce using rule 15 (stmts -> stmts stmt .)
    RBRACE          reduce using rule 15 (stmts -> stmts stmt .)


state 28

    (23) atribuicao -> ID EQUALS . expr
    (24) atribuicao -> ID EQUALS . STRING
    (25) atribuicao -> ID EQUALS . bloco_INPUT
    (26) atribuicao -> ID EQUALS . receive_stmt
    (27) expr -> . INT
    (28) expr -> . STRING
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr LESS_THAN expr
    (34) expr -> . expr GREATER_THAN expr
    (35) expr -> . expr LESS_THAN_EQUALS expr
    (36) expr -> . expr GREATER_THAN_EQUALS expr
    (37) expr -> . expr EQUALS_EQUALS expr
    (38) expr -> . expr NOT_EQUALS expr
    (39) expr -> . ID
    (10) bloco_INPUT -> . INPUT LPAREN RPAREN
    (46) receive_stmt -> . ID DOT RECEIVE LPAREN args RPAREN

    STRING          shift and go to state 37
    INT             shift and go to state 40
    ID              shift and go to state 35
    INPUT           shift and go to state 22

    expr                           shift and go to state 36
    bloco_INPUT                    shift and go to state 38
    receive_stmt                   shift and go to state 39

state 29

    (45) send_stmt -> ID DOT . SEND LPAREN args RPAREN
    (46) receive_stmt -> ID DOT . RECEIVE LPAREN args RPAREN

    SEND            shift and go to state 41
    RECEIVE         shift and go to state 42


state 30

    (8) bloco_IF -> IF LPAREN . bool RPAREN LBRACE stmts RBRACE
    (40) bool -> . expr
    (27) expr -> . INT
    (28) expr -> . STRING
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr LESS_THAN expr
    (34) expr -> . expr GREATER_THAN expr
    (35) expr -> . expr LESS_THAN_EQUALS expr
    (36) expr -> . expr GREATER_THAN_EQUALS expr
    (37) expr -> . expr EQUALS_EQUALS expr
    (38) expr -> . expr NOT_EQUALS expr
    (39) expr -> . ID

    INT             shift and go to state 40
    STRING          shift and go to state 45
    ID              shift and go to state 46

    bool                           shift and go to state 43
    expr                           shift and go to state 44

state 31

    (9) bloco_WHILE -> WHILE LPAREN . bool RPAREN LBRACE stmts RBRACE
    (40) bool -> . expr
    (27) expr -> . INT
    (28) expr -> . STRING
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr LESS_THAN expr
    (34) expr -> . expr GREATER_THAN expr
    (35) expr -> . expr LESS_THAN_EQUALS expr
    (36) expr -> . expr GREATER_THAN_EQUALS expr
    (37) expr -> . expr EQUALS_EQUALS expr
    (38) expr -> . expr NOT_EQUALS expr
    (39) expr -> . ID

    INT             shift and go to state 40
    STRING          shift and go to state 45
    ID              shift and go to state 46

    bool                           shift and go to state 47
    expr                           shift and go to state 44

state 32

    (10) bloco_INPUT -> INPUT LPAREN . RPAREN

    RPAREN          shift and go to state 48


state 33

    (11) bloco_OUTPUT -> OUTPUT LPAREN . output_args RPAREN
    (12) output_args -> . expr
    (13) output_args -> . output_args COMMA expr
    (27) expr -> . INT
    (28) expr -> . STRING
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr LESS_THAN expr
    (34) expr -> . expr GREATER_THAN expr
    (35) expr -> . expr LESS_THAN_EQUALS expr
    (36) expr -> . expr GREATER_THAN_EQUALS expr
    (37) expr -> . expr EQUALS_EQUALS expr
    (38) expr -> . expr NOT_EQUALS expr
    (39) expr -> . ID

    INT             shift and go to state 40
    STRING          shift and go to state 45
    ID              shift and go to state 46

    output_args                    shift and go to state 49
    expr                           shift and go to state 50

state 34
